--- a/web/index.html
+++ b/web/index.html
@@ -5,6 +5,7 @@
 	<meta charset="UTF-8">
 	<title>WebSockets chat</title>
 	<script src="https://code.jquery.com/jquery-3.0.0.js"></script>
+	<script src="wsclt.js"></script>
 </head>
 <body>
 	Welcome to ws-chat
